src/assets/global.scss
* {
  padding: 0;
  margin: 0;
  font-size: 18px;
  font-family: Roboto, sans-serif;
  box-sizing: border-box;
  //content-visibility: auto;
}

*, ::after, ::before {
  box-sizing: border-box;
}

*:not(p) {
}

ul {
  list-style-type: none; /* Remove bullets */
}

:root {
}

html {
  overflow-x: hidden;
  margin-right: calc(-1 * (100vw - 100%));
  height: 100%;
  background-color: var(--background);
  color: var(--text);
}

body, {
  width: 100%;
  height: 100%;
  min-width: 360px;
}

#app {
  min-height: 100%;
  background-color: var(--background-book);
}

#app.no-scroll {
  overflow: hidden;
}

#aside {
  height: 100%;
  position: fixed;
  left: 0;
  top: 0;
  background-color: var(--surface);
}

.basement {
  width: 100%;
  //height: 100%;
  min-width: 360px;
}

img {
  max-width: 100%;
  display: block;
}

input {
}

.select {
  padding: 5px;
  color: var(--text);
  background-color: var(--surface-light);
  border-radius: 5px;
}

.select:hover {
  background-color: var(--surface-light);
}

.icon {
  fill: var(--primary);
  cursor: pointer;
}

.label {
  display: flex;
  width: 100%;
  margin-bottom: 1rem;
  flex-flow: row wrap;

  .title {
    margin-bottom: 0.5rem;
    width: 100%;
  }

  .value {
    width: 100%;
    padding: 5px 10px;
    color: var(--text);
    background-color: var(--surface);
  }
}

textarea {
  resize: vertical;
}

.mb-half {
  margin-bottom: 0.5rem;
}

.mb-1 {
  margin-bottom: 1rem;
}

.mr-1 {
  margin-right: 1rem;
}

.mr-2 {
  margin-right: 2rem;
}

.sidebar {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  .sidebar-btn, .sidebar-input {
    width: 95%;
  }
  .sidebar-btn {
    text-align: center;
  }
  .sidebar-input {
    color: var(--text);
    background-color: var(--background-on);
    border-radius: 5px;
    border: none;
    padding: 5px;
    display: flex;
  }
}
@media (prefers-color-scheme: dark) {
  //input {
  //  border-color: hsla(0, 0%, 46%, 1);
  //}
}
@media only screen and (min-width: 893px) {
  #aside.show {
    width: 150px;
  }
  #aside.show + #app {
    position: absolute;
    width: calc(100% - 150px);
    left: 150px;
  }
}
@media only screen and (max-width: 892px) {
  #app {
    width: 100%;
  }
  #aside {
    display: none;
  }
  .sidebar {

  }
}

@media only screen and (max-width: 892px) and (orientation: landscape) {

}

@media only screen and (max-width: 892px) and (orientation: portrait) {

}

